Lobby revamp, largely in line with Bill's most recent set of mockups, with various sanization. There remains a bit more prettification to be done, but things mostly work the way they're supposed to.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -30,20 +30,21 @@ m.join_game = Join my '{0}' game.
 t.locating_game = One Moment Please
 m.locating_game = Connecting to game server...
 
-l.penders_header_seated = Click 'Join' to join any of these games waiting for players:
-l.running_header_seated = Click 'Watch' to watch any of these games in progress:
+l.penders_header_seated = Join any of these games waiting for players:
+l.running_header_seated = Watch any of these games in progress:
 l.running_header_seated_nowatch = These games are already in progress:
 m.no_penders_seated = No games are waiting for players. Start your own above!
-m.no_friends_seated = None of your friends are in games that are waiting for players. Start your own above and invite them to play!
 
 l.running_header_party = Click 'Join' to join any of these games in progress:
 m.no_penders_party = There are no games being played right now. Create your own above!
-m.no_friends_party = None of your friends are playing this game right now. Create your own aboev and invite them to play!
+
+b.start_multi = MULTIPLAYER
+b.start_solo = 1 PLAYER
+
+b.create_multi = Create Multiplayer Game
 
 t.create_game = {0} - Create a Game
-b.create = Create Game
-b.start_multi = Multiplayer
-b.start_solo = Single Player
+b.create = Create
 b.cancel = Cancel
 
 t.mini_table = {0} - Waiting for Players
@@ -61,7 +62,7 @@ b.leave_world_game = Leave Game
 l.config_game = Set your game options:
 l.people = People
 
-l.players = Players
+l.players = Maximum Players
 t.players = The number of players in your game.
 
 l.private = Private
@@ -76,13 +77,15 @@ t.rated = Whether or not rankings will be affected by this game.
 l.is_rated = Rated
 l.not_rated = Not Rated
 
-l.invite_friends = Invite your friends to join your game:
+l.invite_friends = Invite Friends
 l.invite_no_friends = None of your friends are online.
 l.invite_all = Invite all
+
+t.invite_link = Invite Friends to Play!
 l.invite_link = Email or IM this link to invite a friend to your game:
 
 t.tables = Join a Game
-l.table = Table name
+l.table = Give your game a name:
 i.table = Your table's name is displayed in the lobby
 l.default_table = {0}'s table
 
@@ -136,3 +139,5 @@ e.unwatchable_game = Your friend is playing an unwatchable game.
 e.no_longer_lobbying = Your friend is no longer sitting at a pending game table.
 e.game_in_progress = Your friend's game has already started.
 e.game_table_full = Your friend's game table is full.
+
+m.table_position_occupied = Oops! That table position is already occupied.
