Switch to using a list to display tables so that maybe I can get alternatingItemColors to work. Of course it doesn't work, but hey, what's another few hours of beating my head against Flex between friends?

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -30,18 +30,11 @@ m.join_game = Join my '{0}' game.
 t.locating_game = One Moment Please
 m.locating_game = Connecting to game server...
 
-l.penders_header_seated = Join any of these games waiting for players:
-l.running_header_seated = Watch any of these games in progress:
-l.running_header_seated_nowatch = These games are already in progress:
-m.no_penders_seated = No games are waiting for players. Start your own above!
-
-l.running_header_party = Click 'Join' to join any of these games in progress:
-m.no_penders_party = There are no games being played right now. Create your own above!
+#
+# LobbyPanel (and various children, this pig's breakfast needs to be sorted out)
 
 b.start_multi = MULTIPLAYER
 b.start_solo = 1 PLAYER
-
-b.create_multi = Create Multiplayer Game
 
 t.create_game = {0} - Create a Game
 b.create = Create
@@ -51,7 +44,6 @@ t.mini_table = {0} - Waiting for Players
 
 b.leave = Leave
 b.start_now = Start now
-b.join = Join
 b.watch = Watch
 b.enter = Enter
 t.forming = Play a Game
@@ -59,7 +51,6 @@ t.running = Watch a Game
 
 b.leave_world_game = Leave Game
 
-l.config_game = Set your game options:
 l.people = People
 
 l.players = Maximum Players
@@ -84,8 +75,8 @@ l.invite_all = Invite all
 t.invite_link = Invite Friends to Play!
 l.invite_link = Email or IM this link to invite a friend to your game:
 
-t.tables = Join a Game
-l.table = Give your game a name:
+t.create_table = Create Your Game
+l.table = Game name
 i.table = Your table's name is displayed in the lobby
 l.default_table = {0}'s table
 
@@ -113,6 +104,24 @@ t.quest_offer = You're being offered a quest.
 t.quest_completion = You completed a quest!
 b.accept_quest = Accept
 b.decline_quest = Decline
+
+#
+# LobbyMatchPanel
+
+t.lmp_games = Join a Game
+
+b.create_multi = Create Game
+i.create_multi = Start your own game and invite your friends!
+
+m.no_penders_seated = No games are waiting for players. Start your own above!
+m.no_penders_party = There are no games being played right now. Create your own above!
+
+#
+# TableSummaryPanel
+
+b.tsp_join = Join
+b.tsp_play = Play
+b.tsp_watch = Watch
 
 #
 # Gamestub-specific stuff
