More tidying up, more custom code and we're pretty much ready to go.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -33,9 +33,6 @@ m.locating_game = Connecting to game server...
 #
 # LobbyPanel (and various children, this pig's breakfast needs to be sorted out)
 
-b.start_multi = MULTIPLAYER
-b.start_solo = 1 PLAYER
-
 t.create_game = {0} - Create a Game
 b.create = Create
 b.cancel = Cancel
@@ -53,14 +50,14 @@ b.leave_world_game = Leave Game
 
 l.people = People
 
-l.players = Maximum Players
-t.players = The number of players in your game.
+l.players = Max Players
+t.players = The number of seats for players at your table.
 
 l.private = Private
 t.private = No one can enter a private game once it has started.
 
 l.watchable = Watchable
-t.watchable = Whether or not other people can watch your game after it starts.
+t.watchable = Whether or not other people are allowed to watch your game after it starts.
 
 l.rated = Rated
 t.rated = Whether or not rankings will be affected by this game.
@@ -78,7 +75,7 @@ l.invite_link = Email or IM this link to invite a friend to your game:
 t.create_table = Create Your Game
 l.table = Game name
 i.table = Your table's name is displayed in the lobby
-l.default_table = {0}'s table
+l.default_table = {0}'s game
 
 l.guest_flow_title = You Earned {0} Coins!
 l.guest_flow_note = If you sign up now, you can keep it and buy cool stuff!
@@ -106,12 +103,20 @@ b.accept_quest = Accept
 b.decline_quest = Decline
 
 #
+# LobbySplashPanel
+
+b.start_multi = MULTIPLAYER
+b.start_solo = 1 PLAYER
+
+m.lsp_playing = {0} playing now!
+
+#
 # LobbyMatchPanel
 
 t.lmp_games = Join a Game
 
 b.create_multi = Create Game
-i.create_multi = Start your own game and invite your friends!
+i.create_multi = Start a game and invite your friends!
 
 m.no_penders_seated = No games are waiting for players. Start your own above!
 m.no_penders_party = There are no games being played right now. Create your own above!
@@ -122,6 +127,9 @@ m.no_penders_party = There are no games being played right now. Create your own 
 b.tsp_join = Join
 b.tsp_play = Play
 b.tsp_watch = Watch
+
+m.tsp_players = {0} players, {1} openings
+m.tsp_in_progress = In progress...
 
 #
 # Gamestub-specific stuff
