Added a link to the game's instructions on the splash panel. Fixed up some party game related bits.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -109,6 +109,7 @@ b.start_multi = MULTIPLAYER
 b.start_solo = 1 PLAYER
 
 m.lsp_playing = {0} playing now!
+m.lsp_instructions = Game Info and Instructions
 
 #
 # LobbyMatchPanel
