Moved more translations to the stuido bundle.

--- a/rsrc/en_US/i18n/studio.properties
+++ b/rsrc/en_US/i18n/studio.properties
@@ -11,12 +11,23 @@
 # p.foo = prompt
 # x.foo = optional translation that may or may not be present
 
-t.backdrop_editor = Backdrop Editor
+# General
+#
+l.no_actions = No actions
+i.sprite_scale = Scale...
 
+# Avatar viewer
+#
+i.talk = Test speaking action (if any)
+i.idle = Test idle action (if any)
+
+# Backdrop editor
+#
+i.decor_options = Show/hide backdrop options
+t.backdrop_editor = Backdrop Editor
 l.room_type = Room type:
 l.room_type_1 = Normal
 l.room_type_3 = Flatland
-
 l.scale = Scale:
 l.horizon = Horizon:
 l.depth = Depth:
