--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -234,8 +234,10 @@ m.share_email_sent = Email sent. Thanks for sharing!
 
 # AVRG menu
 b.avrgExit = Exit game
-b.avrgInvite = Invite friends
-b.avrgComment = Go to comments
+b.avrgInstructions = Instructions
+b.avrgInvite = Invite friends to play
+b.avrgComment = Comment
+b.avrgTrophies = Trophies
 
 # Problems with urls
 e.no_navigate = Unable to load requested page: {0}
