- Whoops, was parsing offsetx/offsety as ints, should be floats.   But, gol-dang, I think I'm going to rip out those options anyway. - Change dialog title.

--- a/rsrc/en_US/i18n/studio.properties
+++ b/rsrc/en_US/i18n/studio.properties
@@ -23,7 +23,7 @@ i.idle = Test idle action (if any)
 
 # Backdrop editor
 #
-t.backdrop_editor = Backdrop Editor
+t.backdrop_props = Backdrop Properties
 l.room_type = Room type:
 l.room_type_1 = Normal
 l.room_type_3 = Flatland
