* Replace the fancy (but sometimes confusing) badge level names with roman numerals. * Display the level numeral on the passport page. * Added a function to MsoyUI on the java side for converting an arabic numeral to a roman   numeral.  In Java, it needs to be there so that FeedPanel can access the badge display value   without accessing Badge. * Discovered that this future-proof conversion is nice, but doesn't mesh with the transaction   page because transactions create their fully bundled translation message on the server.  So,   we are still maintaining badgelevel_ names in DynamicMessages.properties. * Asked Ray where a similar function might go in Actionscript, and he freaked out.  He wants it to   to live in Badge on both Java and Actionscript sides because we won't possibly ever, ever want   to use this anywhere else, ever.  Because it's so terrible.  Plus DCLXVI is the number of Teh   Beast.  It can't be in Badge.java for the reason mentioned above, but it's there on the   Actionscript side.

--- a/rsrc/en_US/i18n/passport.properties
+++ b/rsrc/en_US/i18n/passport.properties
@@ -18,28 +18,19 @@ t.badge_awarded = You earned a Stamp:
 m.badge_awarded = You earned the [{0} Stamp|command://ViewPassport] and received a reward of {1} \
 coins!
 
-# level names
-
-m.badge_level_0 = Apprentice
-m.badge_level_1 = Novice
-m.badge_level_2 = Journeyman
-m.badge_level_3 = Adept
-m.badge_level_4 = Master
-m.badge_level_5 = Grand Master
-
 # badge names
 
-m.badge_name_f0c035cd = {0} Furniture Builder
-m.badge_name_e6af01a4 = {0} Judge
-m.badge_name_3aa0bef4 = {0} Fixture
-m.badge_name_c4fd834b = {0} Friendly
-m.badge_name_3ca5a071 = {0} Outspoken
-m.badge_name_e6a0e95b = {0} Contender
-m.badge_name_26873aba = {0} Merchant
-m.badge_name_8a19eba3 = {0} Collector
-m.badge_name_1923c147 = {0} Shopper
-m.badge_name_6e67007d = {0} Character Designer
-m.badge_name_117171d7 = {0} Landscape Painter
-m.badge_name_7f70d917 = {0} Gamer
-m.badge_name_325f4c9 = {0} Artisan
-m.badge_name_fa58270b = {0} Magnet
+m.badge_name_f0c035cd = Furniture Builder {0}
+m.badge_name_e6af01a4 = Judge {0}
+m.badge_name_3aa0bef4 = Fixture {0}
+m.badge_name_c4fd834b = Friendly {0}
+m.badge_name_3ca5a071 = Outspoken {0}
+m.badge_name_e6a0e95b = Contender {0}
+m.badge_name_26873aba = Merchant {0}
+m.badge_name_8a19eba3 = Collector {0}
+m.badge_name_1923c147 = Shopper {0}
+m.badge_name_6e67007d = Character Designer {0}
+m.badge_name_117171d7 = Landscape Painter {0}
+m.badge_name_7f70d917 = Gamer {0}
+m.badge_name_325f4c9 = Artisan {0}
+m.badge_name_fa58270b = Magnet {0}
