Simplified backdrop editing. - Don't allow editing of offsetX/offsetY. - Ditto with width/height. - Moved the hidewalls option into the type dropdown.

--- a/rsrc/en_US/i18n/studio.properties
+++ b/rsrc/en_US/i18n/studio.properties
@@ -25,11 +25,13 @@ i.idle = Test idle action (if any)
 #
 t.backdrop_props = Backdrop Properties
 l.room_type = Room type:
-l.room_type_1 = Normal
-l.room_type_3 = Flatland
+m.room_normal = Interior
+m.room_no_walls = No walls
+m.room_flat = Flatland
 l.scale = Scale:
 l.horizon = Horizon:
 l.depth = Depth:
+
 l.dimensions = Dimensions:
 l.offsets = Offsets:
 l.hide_walls = No side walls
