Currencies: capitalize the label, lowercase the message.

--- a/rsrc/en_US/i18n/global.properties
+++ b/rsrc/en_US/i18n/global.properties
@@ -26,9 +26,9 @@ m.bars.0 = 0 bars
 m.bars.1 = 1 bar
 m.bars.n = {0} bars
 m.bling = {0} bling
-l.coins = coins
-l.bars = bars
-l.blind = bling
+l.coins = Coins
+l.bars = Bars
+l.blind = Bling
 
 # Connection related
 m.disconnected = You have been disconnected from the server.
