- Changed some WorldController commands, just made generic VIEW_SHOP   and VIEW_STUFF commands that take a type arg. - Added a widget for seeing the name / changing the backdrop in the   room editor.

--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -15,6 +15,7 @@
 
 t.editor_title = Arranging Room:
 t.editing_no_name = (unnamed item)
+l.decor = Backdrop:
 l.select_item = Select an item...
 l.entrance = Room entrance
 l.new_furni = Add furniture...
