Ditched offsetX and offsetY from backdrops for good. Added an option to scale furniture separately from actors.

--- a/rsrc/en_US/i18n/studio.properties
+++ b/rsrc/en_US/i18n/studio.properties
@@ -28,6 +28,7 @@ l.room_type = Room type:
 m.room_normal = Interior
 m.room_no_walls = No walls
 m.room_flat = Flatland
-l.scale = Scale:
+l.actor_scale = Actors:
+l.furni_scale = Furniture:
 l.horizon = Horizon:
 l.depth = Depth:
