The stub-generation and download servlet. Oh baby, we're making use of JSwiff. - If you're a manager for a room, you get an additional section in the   share dialog: "Get a SWF". - The servlet that provides the swf reads the base stub off disk,   replaces the url and parameters with those appropriate to the server,   and allows the user to download the swf. - TODO: security (for the servlet) and a bit of UI love in the dialog.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -232,6 +232,12 @@ t.embed = Embed it
 e.invalid_addr = '{0}' does not look like a valid email address.
 m.share_email_sent = Email sent. Thanks for sharing!
 
+t.stub_share = Get a SWF
+m.stub_share = Download a SWF that links directly to this room! This is \
+ for use on sites like deviantArt that won't let you post embed code but \
+ will allow direct uploading of media.
+b.stub_share = Download SWF
+
 # AVRG menu
 b.avrgExit = Exit game
 b.avrgInstructions = Instructions
