- A server translation for the support request updated whirled mails

--- a/rsrc/i18n/server.properties
+++ b/rsrc/i18n/server.properties
@@ -33,3 +33,8 @@ m.reply_subject = Re: {0}
 m.new_room_name = {0}'s Room
 
 m.favorites_list_name = Favorites
+
+m.support_request_subject = Support Request Updated: "{0}"
+m.support_request_body = A reply as been posted to your support request "{0}". \
+  Click "Contact Us" on the "Help" page to view the updated support request. \
+  \n\nPlease do not reply to this message.
