- Moved the NotificationDirector to MsoyContext and the   NotificationDisplay to ControlBar (both from World*) - Made the AwardPanel also work in Msoy* - Display the number of emails in the new mail notification.

--- a/rsrc/en_US/i18n/notify.properties
+++ b/rsrc/en_US/i18n/notify.properties
@@ -19,7 +19,8 @@ m.invite_accepted = {0} just accepted your invitation! Your friend's display nam
 [{1}|command://ViewMember//{2}].
 m.new_release_notes = There are new release notes. [View now|command://PopupNotifications].
 m.level_up = You have advanced to level {0}!
-m.new_mail = You have new mail. [Check now|command://ViewMail].
+m.new_mail.1 = You have new mail. [Check now|command://ViewMail].
+m.new_mail.n = You have {0} new mails. [Check now|command://ViewMail].
 m.game_invite = You have been invited by [{0}|command://ViewMember/{1}] to play {2}. \
 [Join their game!|command://JoinPlayerGame/{3}/{1}]
 m.follow_invite = You have been invited to follow [{0}|command://ViewMember/{1}]. You can \
