Replace avatars with a static avatar if room population is 10 or more and let the user know what happened

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -284,6 +284,7 @@ t.avatar_scale = Scale your avatar
 b.reset_scale = Reset scale to 1
 b.change_avatar = Change avatar...
 b.avatars_full = View full list...
+m.static_avatar = Your avatar has been replaced with a static image due to a high room population.
 
 # Pets
 t.pets = Pets
