Checkpoint: work on allowing people to directly download a room snapshot. (Currently disabled) A fork has been stuck by FP10, which requires uploads to be in direct response to a user click. So I'll have to fix that up.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -16,17 +16,20 @@ l.recent_scenes = Recent scenes
 
 # Snapshots
 t.snap = Room snapshot
+b.snap_gallery = Add to 'My Images'
+m.snap_save_opts = Select destination(s)
+b.snap_download = Download to my computer
+b.snap_scene_thumbnail = Use as room preview
 b.snap_occs = Include occupants?
 b.snap_overlays = Include overlays (chat)?
-b.snap_scene_thumbnail = Use as room preview
+l.snap_preview = Preview:
 b.snap_update = Update
-b.snap_gallery = Add to 'My Images'
 b.snap_cancel = Cancel upload
-b.snap_progress = Uploading snapshot...
-b.snap_upload_starting = Upload starting
-b.snap_upload_thumb = Uploading room preview
-b.snap_upload_snap = Uploading snapshot item
-b.snap_upload_fail = Uploading failed
+m.snap_progress = Uploading snapshot...
+m.snap_upload_starting = Upload starting
+m.snap_upload_thumb = Uploading room preview
+m.snap_upload_snap = Uploading snapshot item
+e.snap_upload_fail = Uploading failed
 e.snap = Server error. Snapshot upload failed.
 m.snap_success = Snapshot saved.
 #l.edit_snapshot_desc = You can save this image as your room snapshot. It will appear along with your room description in the Whirledwide view. You will be able to access your snapshot at:
