--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -25,12 +25,13 @@ b.snap_overlays = Include overlays (chat)?
 l.snap_preview = Preview:
 b.snap_update = Update
 b.snap_cancel = Cancel upload
-m.snap_progress = Uploading snapshot...
+m.snap_progress = Saving snapshot...
 m.snap_upload_starting = Upload starting
 m.snap_upload_thumb = Uploading room preview
 m.snap_upload_snap = Uploading snapshot item
-e.snap_upload_fail = Uploading failed
-e.snap = Server error. Snapshot upload failed.
+m.snap_download = Downloading image...
+e.snap_upload = Upload failed: {0}
+e.snap_download = Download failed: {0}
 m.snap_success = Snapshot saved.
 #l.edit_snapshot_desc = You can save this image as your room snapshot. It will appear along with your room description in the Whirledwide view. You will be able to access your snapshot at:
 #m.snapshot_some_failed = Note: Some room elements were not able to be snapshotted.
