--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -80,7 +80,7 @@ i.notifications = No notifications to view
 i.notifications_avail = Click to view new notifications
 i.channel = Chat with friends and groups
 i.share = Share or embed this place
-i.comment = Leave a comment about this place
+i.comment = Comment or rate this place
 i.instructions = Game instructions
 i.tickButton = Reset
 i.avrg = View game options
