Properly handle table-related errors.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -133,6 +133,17 @@ m.tsp_players = {0} players, {1} openings
 m.tsp_in_progress = In progress...
 
 #
+# Parlor Table errors
+
+m.no_such_table = Oops! That table no longer exists.
+m.must_be_creator = Only the table creator can do that.
+m.no_self_boot = You're very funny, but you can't boot yourself from the table.
+m.table_position_occupied = Oops! That table position is already occupied.
+m.already_at_table = You're already sitting at a table. You need to leave that one first.
+m.not_at_table = Hrm. You don't seem to be at the table you're requesting to leave.
+m.banned_from_table = Sorry, you've been blocked from sitting at that table.
+
+#
 # Gamestub-specific stuff
 
 t.players = Player list
@@ -157,5 +168,3 @@ e.unwatchable_game = Your friend is playing an unwatchable game.
 e.no_longer_lobbying = Your friend is no longer sitting at a pending game table.
 e.game_in_progress = Your friend's game has already started.
 e.game_table_full = Your friend's game table is full.
-
-m.table_position_occupied = Oops! That table position is already occupied.
