Quick-E-hacking to get snapshots happy in FP10. - Both uploads trigger at once. - Once the download is ready, you're prompted to hit a button to begin it.
Some love could be applied- there's no indicator as to why the OK button is
sometimes dimmed. I need to ProgressEvent-ify the BackgroundJPGEncoder, but
this works for now.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -26,14 +26,9 @@ l.snap_preview = Preview:
 b.snap_update = Update
 b.snap_cancel = Cancel upload
 m.snap_progress = Saving snapshot...
-m.snap_upload_starting = Upload starting
-m.snap_upload_thumb = Uploading room preview
-m.snap_upload_snap = Uploading snapshot item
-m.snap_download = Downloading image...
+m.snap_upload = Uploading data...
+m.snap_download = Your snapshot is ready to download.
+m.snap_download_progress = Downloading...
 e.snap_upload = Upload failed: {0}
 e.snap_download = Download failed: {0}
-m.snap_success = Snapshot saved.
-#l.edit_snapshot_desc = You can save this image as your room snapshot. It will appear along with your room description in the Whirledwide view. You will be able to access your snapshot at:
-#m.snapshot_some_failed = Note: Some room elements were not able to be snapshotted.
-
 m.sceneItemName = Snapshot: {0}
