Chat muting for whirled.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -175,6 +175,8 @@ m.avail_tip_1 = You are now allowing game invitations and requests from only you
 m.avail_tip_2 = You will not receive game invitations or requests from anyone.
 
 b.open_channel = Start private chat
+b.mute = Mute player
+b.unmute = Unmute player
 b.visit_home = Visit home
 b.view_member = View member profile
 b.visit_member = Warp to member's location
