--- a/rsrc/en_US/i18n/global.properties
+++ b/rsrc/en_US/i18n/global.properties
@@ -52,6 +52,12 @@ m.day.0 = 0 days
 m.day.1 = 1 day
 m.day.n = {0} days
 
+# Mute related
+m.muted = You have muted {0} for this session.
+m.unmuted = {0} has been unmuted.
+m.notmuted = {0} is not muted.
+m.no_tell_mute = You may not send a message to a person that you've muted.
+
 # From the Vilya library
 m.player_game_over = Game over for {0}.
 
