--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -13,6 +13,11 @@
 
 l.recent_scenes = Recent scenes
 
+#
+# Whirled Tour
+l.tour = Whirled\nTour:
+b.tour_next = Next room
+
 
 # Snapshots
 t.snap = Room snapshot
