--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -17,6 +17,7 @@ l.recent_scenes = Recent scenes
 # Whirled Tour
 l.tour = Whirled\nTour:
 b.tour_next = Next room
+e.toured_out = Sorry, there are no more rooms in the Whirled Tour. Try again in a minute.
 
 
 # Snapshots
