Moved publish translations to the editing bundle. Improved the text somewhat. It's still fucking obtuse and I hate it. Onward to badge madness...

--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -11,6 +11,19 @@
 # e.foo = error
 # x.foo = optional translation that may or may not be present
 
+#
+# PublishPanel
+t.publish = Publish this room
+m.publish = Would you like to publish this room? Until the room is published for the \
+  first time, it is not considered for the whirled tour. If you are ready for people to \
+  visit and rate this room, publish it; otherwise you may want to wait. Publishing will \
+  also update the room's preview image.
+m.publish_private = Note: this room is not publicly available. You may still publish it \
+  but it will not be part of the Whirled Tour. If you would like to change this, \
+  return to the editor and change the access controls using the lock buttons.
+b.publish = Publish this room
+b.publish_cancel = Don't publish: this was a minor edit
+
 # in-room editor
 
 t.editor_title = Arranging Room:
