Slapped a button to start the tour on the HomePageDialog. Supposedly this is coming, but I couldn't wait.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -15,6 +15,7 @@ l.recent_scenes = Recent scenes
 
 #
 # Whirled Tour
+b.start_tour = Take the Whirled Tour!
 l.tour = Whirled\nTour:
 b.tour_next = Next room
 e.toured_out = Sorry, there are no more rooms in the Whirled Tour. Try again in a minute.
