--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -14,15 +14,13 @@
 #
 # PublishPanel
 t.publish = Publish this room
-m.publish = Would you like to publish this room? Until the room is published for the \
-  first time, it is not considered for the whirled tour. If you are ready for people to \
-  visit and rate this room, publish it; otherwise you may want to wait. Publishing will \
-  also update the room's preview image.
+m.publish = Publish your room when you are finished editing and ready to have it rated \
+  and submitted to the Whirled tour. The preview snapshot will be updated.
 m.publish_private = Note: this room is not publicly available. You may still publish it \
   but it will not be part of the Whirled Tour. If you would like to change this, \
   return to the editor and change the access controls using the lock buttons.
-b.publish = Publish this room
-b.publish_cancel = Don't publish: this was a minor edit
+b.publish = Publish
+b.publish_cancel = Don't publish
 
 # in-room editor
 
