Improvements for home page grid panel * Multiline text fields under icons, required cell size adjustments * Badge descriptions instead of names (left name as a translatable argument in case it is needed later) * Whirled tour always in top 3 unless member is already on tour * Label game, room and group items with verbs

--- a/rsrc/en_US/i18n/passport.properties
+++ b/rsrc/en_US/i18n/passport.properties
@@ -34,3 +34,38 @@ m.badge_name_117171d7 = Landscape Painter {0}
 m.badge_name_7f70d917 = Gamer {0}
 m.badge_name_325f4c9 = Artisan {0}
 m.badge_name_fa58270b = Magnet {0}
+
+#
+# Badge descriptions
+
+m.badge_desc_N_3aa0bef4 = Log {0} hours
+m.badge_desc_0_c4fd834b = Make a friend
+m.badge_desc_N_c4fd834b = Make {0} friends
+m.badge_desc_0_3ca5a071 = Give a comment to a creator
+m.badge_desc_N_3ca5a071 = Give {0} comments to creators
+m.badge_desc_0_e6a0e95b = Win a multiplayer game
+m.badge_desc_N_e6a0e95b = Win {0} multiplayer games
+m.badge_desc_0_8a19eba3 = Earn a game trophy
+m.badge_desc_N_8a19eba3 = Earn {0} game trophies
+m.badge_desc_0_7f70d917 = Play a game
+m.badge_desc_N_7f70d917 = Play {0} game sessions
+m.badge_desc_0_ac95aafe = Come back to Whirled tomorrow
+m.badge_desc_N_ac95aafe = Check out Whirled {0} days in a row
+m.badge_desc_0_fa58270b = Bring a friend
+m.badge_desc_N_fa58270b = Bring {0} friends
+m.badge_desc_0_e6af01a4 = Rate an item in the shop
+m.badge_desc_N_e6af01a4 = Rate {0} items in the shop
+m.badge_desc_0_1923c147 = Buy a shop item
+m.badge_desc_N_1923c147 = Spend {0} coins in the shop
+m.badge_desc_N_26873aba = Earn {0} coins in shop sales
+m.badge_desc_0_325f4c9 = Get a 4 star rating on an item
+m.badge_desc_N_325f4c9 = Sell {0} items in the shop with a rating of 4 or more stars
+m.badge_desc_0_117171d7 = Upload a Backdrop
+m.badge_desc_1_117171d7 = List a Backdrop in the shop
+m.badge_desc_2_117171d7 = Sell a Backdrop in the shop
+m.badge_desc_0_f0c035cd = Upload a piece of Furniture to the shop
+m.badge_desc_1_f0c035cd = List a piece of Furniture in the shop
+m.badge_desc_2_f0c035cd = Sell a piece of Furniture in the shop
+m.badge_desc_0_6e67007d = Upload an Avatar to Whirled
+m.badge_desc_1_6e67007d = List an Avatar in the shop
+m.badge_desc_2_6e67007d = Sell an Avatar in the shop
