Added explorer badge to action script text props

--- a/rsrc/en_US/i18n/passport.properties
+++ b/rsrc/en_US/i18n/passport.properties
@@ -34,6 +34,7 @@ m.badge_name_117171d7 = Landscape Painter {0}
 m.badge_name_7f70d917 = Gamer {0}
 m.badge_name_325f4c9 = Artisan {0}
 m.badge_name_fa58270b = Magnet {0}
+m.badge_name_21cc30a2 = Explorer {0}
 
 #
 # Badge descriptions
@@ -69,3 +70,4 @@ m.badge_desc_2_f0c035cd = Sell a piece of Furniture in the shop
 m.badge_desc_0_6e67007d = Upload an Avatar to Whirled
 m.badge_desc_1_6e67007d = List an Avatar in the shop
 m.badge_desc_2_6e67007d = Sell an Avatar in the shop
+m.badge_desc_N_21cc30a2 = Visit {0} rooms on the Whirled Tour
