Complain if the player is already Touring.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -19,6 +19,7 @@ b.start_tour = Take the Whirled Tour!
 l.tour = Whirled\nTour:
 b.tour_next = Next room
 e.toured_out = Sorry, there are no more rooms in the Whirled Tour. Try again in a minute.
+e.already_touring = You're already on the Whirled Tour.
 
 
 # Snapshots
