Display the number of players instead of just "In progress...".

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -130,7 +130,7 @@ b.tsp_play = Play
 b.tsp_watch = Watch
 
 m.tsp_players = {0} players, {1} openings
-m.tsp_in_progress = In progress...
+m.tsp_in_progress = {0} playing
 
 #
 # Parlor Table errors
