Knocked down old TODO: always show the friends button, if a guest clicks it they get up-sell to register.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -66,6 +66,7 @@ t.about = About Whirled
 m.about = <html><p align='center'><font size='+8'>Whirled</font><br>Copyright &#x00A9; 2007 - 2008, Three Rings Design, Inc.<br><br>Client build: {0}<br>Flash player version: {1}</p></html>
 
 # Control bar
+b.send = send
 i.volume = Sound volume
 i.zoom = Zoom the room view
 i.zoom_disabled = The room view is fully shown
@@ -92,6 +93,7 @@ i.percent_fmt = {0}%
 # Friends list
 l.emptyStatus = Enter status...
 l.statusPrompt = is 
+m.guest_friends = Register today to make friends on Whirled!
 
 # Header bar
 i.go = Go...
