More custom-ass button removery. We'll thank ourselves in the future when we're i18n-ing. Just use an orange button with text on it, rather than having a special "Send" button that's used in *one place*.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -66,7 +66,7 @@ t.about = About Whirled
 m.about = <html><p align='center'><font size='+8'>Whirled</font><br>Copyright &#x00A9; 2007 - 2008, Three Rings Design, Inc.<br><br>Client build: {0}<br>Flash player version: {1}</p></html>
 
 # Control bar
-b.send = send
+b.chat_send = send
 i.volume = Sound volume
 i.zoom = Zoom the room view
 i.zoom_disabled = The room view is fully shown
@@ -224,6 +224,8 @@ l.embed_size1 = Small
 l.embed_size2 = Medium
 l.embed_size3 = Large
 l.embed_dimensions = ({0}x{1})
+b.send = Send
+b.copy = Copy
 
 l.embed_instruction = Copy the HTML below to your blog or website:
 l.link_instruction = Link directly here. Just copy and paste!
