--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -268,14 +268,20 @@ m.awayDefault = I'm away from the keyboard.
 # Follow related messages
 m.invited_to_follow = You have invited {0} to follow you.
 m.being_followed = {0} is now following you.
-m.follows_cleared = You are no longer being followed by anyone.
+m.follows_cleared = You are no longer being followed.
 
-m.follow_not_in_room = That player is no longer in the same room.
-m.follow_not_available = That player has requested not to be disturbed.
-m.follow_invite_expired = That player has left or no longer wants to be followed.
+b.follow_other = Follow this player
 
-m.following = You are now following. Click your own avatar to stop following.
-m.not_following = You are no longer following.
+b.ditch_follower = Remove follower
+m.follower_ditched = {0} is no longer following you.
+m.new_follower = {0} is now following you.
+
+e.follow_not_in_room = That player is no longer in the same room.
+e.follow_not_available = That player has requested not to be disturbed.
+e.follow_invite_expired = That player has left or no longer wants to be followed.
+
+m.following = You are now following {0}. Click your own avatar to stop following.
+m.not_following = You are no longer following {0}.
 
 # Chat prefs
 t.chat_prefs = Your chat settings
