Rabbit holed into snapshotting AVRGs. - AVRG media was in a normal MediaContainer, it needs to be in a   DataPackMediaContainer to be snapped through the security layer.   - That functionality should probably be broken out at some point,     but DataPackMediaContainer is nasty complicated and there's     no need for the two bits separately right now.   - Added a new event to DataPackMediaContainer to dispatch the     LoaderInfo being used to load the actual media. A DPMC might     end up loading 3 separate things, and getting access to this     LoaderInfo otherwise would be difficult.     - Modified ControlBackend to take a LoaderInfo.   - Had to change around the way AVRGs watch loading... - Created Snapshottable interface for indicating that a DisplayObject   knows a bit about snapshotting and can possibly do smart stuff. - DataPackMediaContainer implements that, removed custom snapping   from MsoySprite. - Changed the snapshotter to reduce everything to Matrix instead of   needing to pass the "framer" to some things. This allows   the Snapshottable interface to be divorced from the specifics of   scene snapshotting a bit. - Created SnapshotUtil to handle snapshotting a container that may   have Snapshottable children. - "overlays" are always snapped now, which is basically just AVRG   overlays. You don't get a choice. Leave your AVRG if you want to   snap the room plain. "include chat" is the new name of the chat   checkbox option. - Omit the loading spinner and other overlays, always.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -29,7 +29,7 @@ m.snap_save_opts = Select destination(s)
 b.snap_download = Download to my computer
 b.snap_scene_thumbnail = Use as room preview
 b.snap_occs = Include occupants?
-b.snap_overlays = Include overlays (chat)?
+b.snap_chat = Include chat?
 l.snap_preview = Preview:
 b.snap_update = Update
 b.snap_cancel = Cancel upload
