Added some verbiage to the share dialog lightly explaining affiliates. The text needs tweaking, possibly with a link to a wiki page about the affiliate system.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -218,6 +218,9 @@ b.edit_prefs = Configure...
 
 t.share_room = Share this Room
 t.share_game = Share this Game
+m.sharing = When you share this place with any of the below methods, any users that register \
+  for whirled through that method will be an affiliate of yours, and you will earn affiliate \
+  payouts for all their purchases.
 l.embed_choose_size = Choose an embed size:
 l.embed_size0 = Mini TV
 l.embed_size1 = Small
