--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -85,11 +85,11 @@ t.gameOver = Game Over
 b.allGames = All Games
 b.backToLobby = Game Lobby
 b.shop = Game Shop
-b.game_whirled = Visit this game's whirled
+b.game_whirled = Visit this game's group
 b.rematch = Request a rematch
 b.replay = Play again
 
-m.goShopping = Visit whirled to go shopping.
+m.goShopping = Visit Whirled to go shopping.
 
 m.trophy_title = You earned a Trophy:
 m.trophy_earned = You earned the "{0}" trophy!
