--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -99,8 +99,8 @@ m.guest_friends = Register today to make friends on Whirled!
 i.go = Go...
 b.back = Back
 l.visit_friends = Visit friends
-b.group_game = Play this whirled's game
-b.group_page = View this whirled's details
+b.group_game = Play this groups's game
+b.group_page = View this groups's details
 
 # note: the embed tag should be coordinated with embedding tags used in WidgetUtilImpl.java
 m.embed = <object width='{2}' height='{3}' classid='clsid:d27cdb6e-ae6d-11cf-96b8-444553540000' codebase='http://active.macromedia.com/flash7/cabs/swflash.cab#version=9,0,0,0' allowScriptAccess='always'><param name='movie' value='{1}'/><param name='wmode' value='opaque'/><param name='FlashVars' value='{0}'/><embed width='{2}' height='{3}' flashvars='{0}' src='{1}' allowScriptAccess='always' wmode='opaque' pluginspace='http://www.macromedia.com/go/getflashplayer' ntype='application/x-shockwave-flash'></embed></object><br/><center><a href="{4}" target="_top">Launch the full version of Whirled</a></center>
@@ -201,8 +201,8 @@ b.clearChat = Clear all chat
 b.hide_chat = Hide chat history (F9)
 b.show_chat = Show chat history (F9)
 m.no_friends = No friends online
-m.no_groups = Not in any whirleds
-l.groups = Whirleds
+m.no_groups = Not in any groups
+l.groups = Groups
 b.sidebar_chat = Put chat in a sidebar
 b.overlay_chat = Overlay chat
 b.show_occ_list = Show occupants
@@ -219,7 +219,7 @@ b.edit_prefs = Configure...
 t.share_room = Share this Room
 t.share_game = Share this Game
 m.sharing = When you share this place with any of the below methods, any users that register \
-  for whirled through that method will be an affiliate of yours, and you will earn affiliate \
+  for Whirled through that method will be an affiliate of yours, and you will earn affiliate \
   payouts for all their purchases.
 l.embed_choose_size = Choose an embed size:
 l.embed_size0 = Mini TV
