--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -218,9 +218,10 @@ b.edit_prefs = Configure...
 
 t.share_room = Share this Room
 t.share_game = Share this Game
-m.sharing = When you share this place with any of the below methods, any users that register \
-  for Whirled through that method will be an affiliate of yours, and you will earn affiliate \
-  payouts for all their purchases.
+m.sharing = Share this place on your web page or with your friends. Anyone that registers \
+  from the share link will become your affiliate. \
+  <ul><a href="http://wiki.whirled.com/Affiliate_Program" target="_blank">Learn \
+  more about the affiliate program</a></ul>.
 l.embed_choose_size = Choose an embed size:
 l.embed_size0 = Mini TV
 l.embed_size1 = Small
