Because flash and flex are such giant piles of shit, just break out the link into a separate component, using a CommandLinkButton so that we can get underlined text. Oh, I tried creating a BetterText class that exposed the inner TextField, but it turns out that's not created until createChildren (sensible), which makes it hard to style. I further modified that to set up a special stylesheet on that TextField and that worked *but negated all the normal styles inherited through flex*. Fuck that, so I just undid everything except my frustration and did things the stupid way.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -219,9 +219,9 @@ b.edit_prefs = Configure...
 t.share_room = Share this Room
 t.share_game = Share this Game
 m.sharing = Share this place on your web page or with your friends. Anyone that registers \
-  from the share link will become your affiliate. \
-  <ul><a href="http://wiki.whirled.com/Affiliate_Program" target="_blank">Learn \
-  more about the affiliate program</a></ul>.
+  from the share link will become your affiliate.
+b.sharing = Learn more about the affiliate program.
+u.affiliates = http://wiki.whirled.com/Affiliate_Program
 l.embed_choose_size = Choose an embed size:
 l.embed_size0 = Mini TV
 l.embed_size1 = Small
