Translation for error that occurs if a user leaves the table but the game has already started on the server

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -142,6 +142,7 @@ m.table_position_occupied = Oops! That table position is already occupied.
 m.already_at_table = You're already sitting at a table. You need to leave that one first.
 m.not_at_table = Hrm. You don't seem to be at the table you're requesting to leave.
 m.banned_from_table = Sorry, you've been blocked from sitting at that table.
+m.game_already_started = Serendipitous! The game started just as you tried to leave the table.
 
 #
 # Gamestub-specific stuff
