--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -85,7 +85,7 @@ i.comment = Comment or rate this place
 i.instructions = Game instructions
 i.tickButton = Reset
 i.avrg = View game options
-i.homePageGrid = View Your Whirled Places
+i.homePageGrid = View your Whirled Places
 
 # Tooltip for sliders
 i.percent_fmt = {0}%
