Bugfix: Gah, the remixer was still broken in FP10 when you needed to buy the remix. Added stupid "click to proceed" dialog.

--- a/rsrc/en_US/i18n/remix.properties
+++ b/rsrc/en_US/i18n/remix.properties
@@ -54,3 +54,6 @@ m.XML = XML
 m.Text = Text
 
 e.notXML = Not valid XML: {0}
+
+t.purchased = Item purchased
+m.purchased = Click to save your remixes.
