- Ditched the old SoundPlayer class. - Moved music playing from RoomObjectController to WorldController. - Added a button to the control bar (oh no! more buttons!) to view music info - Ditched cruft related to chiyogami being able to schedule music for a room.   I would have had to rewrite it anyway, it didn't really make sense (music streams,   so why were we preloading?), and we're not using it now.
TODO:
- MediaControls can't cope if it misses events (fixing shortly)
- button has programmer art
- The damn button won't hide when I tell it to. Goddamn you, flex.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -65,6 +65,9 @@ b.about = About Whirled....
 t.about = About Whirled
 m.about = <html><p align='center'><font size='+8'>Whirled</font><br>Copyright &#x00A9; 2007 - 2008, Three Rings Design, Inc.<br><br>Client build: {0}<br>Flash player version: {1}</p></html>
 
+# Music dialog
+t.music = Currently playing music
+
 # Control bar
 b.chat_send = send
 i.volume = Sound volume
@@ -86,6 +89,7 @@ i.instructions = Game instructions
 i.tickButton = Reset
 i.avrg = View game options
 i.homePageGrid = View your Whirled Places
+i.music = View the currently playing music
 
 # Tooltip for sliders
 i.percent_fmt = {0}%
