--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -15,6 +15,7 @@ l.recent_scenes = Recent scenes
 
 #
 # Whirled Tour
+t.tour = Whirled Tour
 b.start_tour = Take the Whirled Tour!
 l.tour = Whirled\nTour:
 b.tour_next = Next room
