Pets can now be muted.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -340,6 +340,8 @@ m.complain_failed = Complaint failed to be reported
 # Context Menu translations
 
 # Pet menu
+b.mute_pet = Mute pet
+b.unmute_pet = Unmute pet
 b.order_pet_stay = Order to stay
 b.order_pet_follow = Order to follow
 b.order_pet_go_home = Send home
