New translation for agent failure. Also drive by addition of old one.

--- a/rsrc/en_US/i18n/whirledgame.properties
+++ b/rsrc/en_US/i18n/whirledgame.properties
@@ -18,3 +18,9 @@ m.coins_awarded.n = You have earned {0} coins!
 
 m.no_coins_dev = This game is not yet listed, so you can't yet keep any \
   earned coins.
+
+# Service failure message for a missing player
+m.player_not_around = Attempt to reference non-existent player
+
+# Error message when the server agent bailed or could not start
+e.agent_failed = The game could not be loaded. Please try again later.
